# vastsea-sso-backend

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250508_153220_create_user.rs  m20250508_164621_create_permission.rs  m20250508_171534_create_update_at_function.rs
src/: main.rs
src/config/: mod.rs
src/controller/: mod.rs
src/entity/: mod.rs  permission.rs  prelude.rs  user.rs
src/routes/: auth.rs  mod.rs  result.rs
src/service/: mod.rs  password.rs  user.rs
